BPER/DEVF/force-app/main/default/objects/Linea__c/Linea__c.object-meta.xml
<CustomObject>
    <label>Linea</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Linea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Linee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>