BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Add_on_commissionale_medio_annuo__c.field-meta.xml
<CustomField>
    <fullName>Add_on_commissionale_medio_annuo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Add-on commissionale (medio annuo)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>