BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Capitale_Assorbito_1anno__c.field-meta.xml
<CustomField>
    <fullName>Capitale_Assorbito_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capitale Assorbito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>