BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Capitale_assorbito_max__c.field-meta.xml
<CustomField>
    <fullName>Capitale_assorbito_max__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Capitale assorbito max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>