BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Commissioni_altro__c.field-meta.xml
<CustomField>
    <fullName>Commissioni_altro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commissioni altro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>