BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Commissioni_running_1anno__c.field-meta.xml
<CustomField>
    <fullName>Commissioni_running_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commissioni running</label>
    <length>255</length>
    <type>Text</type>
</CustomField>