BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Commissioni_up_front_1anno__c.field-meta.xml
<CustomField>
    <fullName>Commissioni_up_front_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commissioni up front</label>
    <length>255</length>
    <type>Text</type>
</CustomField>