BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Componente_commissionale_media_annua__c.field-meta.xml
<CustomField>
    <fullName>Componente_commissionale_media_annua__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Componente commissionale (media annua)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>