BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Costi_del_rischio__c.field-meta.xml
<CustomField>
    <fullName>Costi_del_rischio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Costi del rischio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>