BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Costi_operativi__c.field-meta.xml
<CustomField>
    <fullName>Costi_operativi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Costi operativi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>