BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Costo_del_capitale__c.field-meta.xml
<CustomField>
    <fullName>Costo_del_capitale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Costo del capitale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>