BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Costo_del_rischio_lordo__c.field-meta.xml
<CustomField>
    <fullName>Costo_del_rischio_lordo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Costo del rischio lordo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>