BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Costo_fiscale__c.field-meta.xml
<CustomField>
    <fullName>Costo_fiscale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Costo fiscale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>