BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Delta_CMU__c.field-meta.xml
<CustomField>
    <fullName>Delta_CMU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delta CMU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>