BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Delta_Commissione_Up_Front__c.field-meta.xml
<CustomField>
    <fullName>Delta_Commissione_Up_Front__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delta Commissione Up Front %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>