BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Differenza_tra_break_even_e_tasso_applic__c.field-meta.xml
<CustomField>
    <fullName>Differenza_tra_break_even_e_tasso_applic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Differenza tra break-even e tasso applic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>