BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Duration_finanziaria_in_anni__c.field-meta.xml
<CustomField>
    <fullName>Duration_finanziaria_in_anni__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duration finanziaria in anni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>