BPER/DEVF/force-app/main/default/objects/Linea__c/fields/EAD_1anno__c.field-meta.xml
<CustomField>
    <fullName>EAD_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EAD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>