BPER/DEVF/force-app/main/default/objects/Linea__c/fields/EAD_annua_media__c.field-meta.xml
<CustomField>
    <fullName>EAD_annua_media__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EAD annua media</label>
    <length>255</length>
    <type>Text</type>
</CustomField>