BPER/DEVF/force-app/main/default/objects/Linea__c/fields/EVA_1anno__c.field-meta.xml
<CustomField>
    <fullName>EVA_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EVA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>