BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Funding_spread__c.field-meta.xml
<CustomField>
    <fullName>Funding_spread__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Funding spread</label>
    <length>255</length>
    <type>Text</type>
</CustomField>