BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Interessi_attivi_1anno__c.field-meta.xml
<CustomField>
    <fullName>Interessi_attivi_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interessi attivi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>