BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Margine_di_intermediazione_1anno__c.field-meta.xml
<CustomField>
    <fullName>Margine_di_intermediazione_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Margine di intermediazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>