BPER/DEVF/force-app/main/default/objects/Linea__c/fields/NOPAT_1anno__c.field-meta.xml
<CustomField>
    <fullName>NOPAT_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NOPAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>