BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Present_EVA__c.field-meta.xml
<CustomField>
    <fullName>Present_EVA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Present EVA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>