BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Present_RARORAC__c.field-meta.xml
<CustomField>
    <fullName>Present_RARORAC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Present RARORAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>