BPER/DEVF/force-app/main/default/objects/Linea__c/fields/RACE_1anno__c.field-meta.xml
<CustomField>
    <fullName>RACE_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>