BPER/DEVF/force-app/main/default/objects/Linea__c/fields/RARORAC_1anno__c.field-meta.xml
<CustomField>
    <fullName>RARORAC_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RARORAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>