BPER/DEVF/force-app/main/default/objects/Linea__c/fields/RWA_Medio__c.field-meta.xml
<CustomField>
    <fullName>RWA_Medio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RWA Medio %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>