BPER/DEVF/force-app/main/default/objects/Linea__c/fields/RWA_rischio_operativo_annui_medi__c.field-meta.xml
<CustomField>
    <fullName>RWA_rischio_operativo_annui_medi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RWA rischio operativo annui medi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>