BPER/DEVF/force-app/main/default/objects/Linea__c/fields/RWA_totale_1anno__c.field-meta.xml
<CustomField>
    <fullName>RWA_totale_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RWA totale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>