BPER/DEVF/force-app/main/default/objects/Linea__c/fields/RWA_totali_annui_max__c.field-meta.xml
<CustomField>
    <fullName>RWA_totali_annui_max__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RWA totali annui max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>