BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Simulazione__c.field-meta.xml
<CustomField>
    <fullName>Simulazione__c</fullName>
    <label>Simulazione</label>
    <referenceTo>Simulazione__c</referenceTo>
    <relationshipLabel>Linee</relationshipLabel>
    <relationshipName>Linee</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>