BPER/DEVF/force-app/main/default/objects/Linea__c/fields/SML_1anno__c.field-meta.xml
<CustomField>
    <fullName>SML_1anno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>