BPER/DEVF/force-app/main/default/objects/Linea__c/fields/SML_annuo_medio__c.field-meta.xml
<CustomField>
    <fullName>SML_annuo_medio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SML annuo medio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>