BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Sprad_EVA_neutral__c.field-meta.xml
<CustomField>
    <fullName>Sprad_EVA_neutral__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sprad EVA neutral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>