BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Tasso_all_in__c.field-meta.xml
<CustomField>
    <fullName>Tasso_all_in__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tasso all-in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>