BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Tasso_di_break_even__c.field-meta.xml
<CustomField>
    <fullName>Tasso_di_break_even__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tasso di break-even</label>
    <length>255</length>
    <type>Text</type>
</CustomField>