BPER/DEVF/force-app/main/default/objects/Linea__c/fields/Tasso_variabile_medio_applicato__c.field-meta.xml
<CustomField>
    <fullName>Tasso_variabile_medio_applicato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tasso variabile medio applicato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>