BPER/DEVF/force-app/main/default/objects/Linea__c/fields/TIT__c.field-meta.xml
<CustomField>
    <fullName>TIT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>