BPER/DEVF/force-app/main/default/objects/Linea__c/fields/TIT_base_di_partenza__c.field-meta.xml
<CustomField>
    <fullName>TIT_base_di_partenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TIT base di partenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>