BPER/DEVF/force-app/main/default/objects/Linea__c/fields/TIT_base_medio__c.field-meta.xml
<CustomField>
    <fullName>TIT_base_medio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TIT base medio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>